feat(sendemail): add send email feature after submit franchise
